added postman test
